manifests/nginx-service.yaml
# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-nginx-svc
spec:
  selector:
    app: example-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
