manifests/ingress-shishir-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shishir-a
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - shishir-a.duckdns.org
    secretName: shishir-a-tls
  rules:
  - host: shishir-a.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-nginx-svc
            port:
              number: 80
