manifests/ingress-shishir-b.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shishir-b
spec:
  ingressClassName: nginx
  rules:
  - host: shishir-b.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-nginx-svc
            port:
              number: 80
